; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_lmgr.c_LockDatabaseObject.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_lmgr.c_LockDatabaseObject.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MyDatabaseId = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @LockDatabaseObject(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @MyDatabaseId, align 4
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* %7, align 4
  %15 = call i32 @SET_LOCKTAG_OBJECT(i32 %10, i32 %11, i32 %12, i32 %13, i32 %14)
  %16 = load i32, i32* %8, align 4
  %17 = call i32 @LockAcquire(i32* %9, i32 %16, i32 0, i32 0)
  %18 = call i32 (...) @AcceptInvalidationMessages()
  ret void
}

declare dso_local i32 @SET_LOCKTAG_OBJECT(i32, i32, i32, i32, i32) #1

declare dso_local i32 @LockAcquire(i32*, i32, i32, i32) #1

declare dso_local i32 @AcceptInvalidationMessages(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
